--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,13 @@
 body {
     font-family: "ABeeZee", sans-serif;
+    background-color: rgb(196, 41, 25);
+}
+
+main {
+    .container {
+        height: 70vh;
+        overflow-y: auto;
+        background-color: gray;
+    }
+
 }
